welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: '(' expected but identifier found.
    if is FacingTrail(c){
       ^SlugSnail:10: error: illegal start of simple expression
  }
  ^