welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while (!estSurBiscuit()){
    if is FacingTrail(c){
      avance()
      marquerSol()
    }else{
      droite()
    }
  }
 }

def isFacingTrail(c:Color):Boolean = {
  var couleurSol:Boolean=false // Indique si le sol est color? ou non.
  if (estFaceMur()){
    return false
  }
  avance()
  if (getCouleurSol()==c){
    couleurSol=true
  }
    
  recule()
	return couleurSol
}

def marquerSol(){
  baisseBrosse()
  leveBrosse()
}